# mivne_wet1

./: Group.cpp  Group.h  Player.cpp  PlayersManager.cpp  PlayersManager.h  avl.h  avl_uri3011221  group.cpp  group.h  main.cpp  player.cpp  player.h  vec2d.cpp  vec2d.h
koko/: CMakeLists.txt  Group.cpp  Group.h  Player.cpp  Player.h  PlayersManager.cpp  PlayersManager.h  Vec2D.cpp  Vec2D.h  avl.h  library1.cpp  main.cpp  main1.cpp
